<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBtnText">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <ProgressBar
            android:id="@+id/_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/data_processing"
            android:textColor="#000"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/_btGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#FFF"
            android:drawableStart="@drawable/ic_baseline_photo_library_24"
            android:drawableLeft="@drawable/ic_baseline_photo_library_24"
            android:text="@string/choose_another_photo"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/_btTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#FFF"
            android:drawableStart="@drawable/ic_baseline_refresh_24"
            android:drawableLeft="@drawable/ic_baseline_refresh_24"
            android:text="@string/try_again"
            android:visibility="invisible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <ImageView
        android:id="@+id/_imgMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="matrix"
        android:visibility="gone" />

</FrameLayout>