<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/_contTxtSaved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:visibility="invisible">

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_baseline_done_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/photo_saved"
                    android:textColor="#000"
                    android:textSize="14sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/_contResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.wizl.beautyscanner.ui.ResultView
                android:id="@+id/_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <TextView
            android:id="@+id/_txtUseGreetify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/please_use_greetify"
            android:textColor="#000"
            android:textSize="13sp"
            android:visibility="invisible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/_btGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#FFF"
                android:padding="12dp"
                android:src="@drawable/ic_baseline_photo_library_24" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/_btSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#FFF"
                android:drawableStart="@drawable/ic_baseline_save_alt_24"
                android:drawableLeft="@drawable/ic_baseline_save_alt_24"
                android:text="@string/save_to_gallery" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/_btSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#FFF"
                android:drawableStart="@drawable/ic_baseline_send_24"
                android:drawableLeft="@drawable/ic_baseline_send_24"
                android:text="@string/send"
                android:visibility="gone" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/_bg_prem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <Button
            android:id="@+id/_btBgPrem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#66000000"/>

        <Button
            android:id="@+id/_btPrem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/get_result" />

    </FrameLayout>

</FrameLayout>